add slideshow and update wording

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<h2><strong>Welcome to Pearl Hacks!</strong></h2>
 				</div>
 				<div class="col-xs-12 col-md-8">
-					<p>Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women of all skill levels to pursue their interests in technology. Hosted at the University of North Carolina at Chapel Hill, for 24 hours you will build projects with peers and mentors about topics that spark your interests. Whether you are a master in heels and Java or you have yet to write your first "Hello World" program, we welcome you all. Look forward to participating in workshops for aspiring and experienced programmers. If advancing your knowledge of computer science isn't enough, we'll have plenty of free food, free shirts, and free swag. What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! </p>
+					<p> What is Pearl Hacks you ask? Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women to pursue their interests in technology. Pearl Hacks is an annual event at UNC - Chapel Hill where female hackers of all skill levels come to explore technology with the help of numerous mentors. The event lasts around 24 hours and we will provide all the free food and swag your heart desires! Whether you've been writing Perl code since you could walk or you have yet to write your first "Hello World" program, we welcome everyone. Best of all is workshops! Workshops are held by experienced programmers throughout the day on all the topics your heart desires!  What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! We can't wait to meet you there.</p>
 				</div>
 				<div class="col-xs-12 col-md-4">
 					<div class="row" id="invitation">
@@ -155,7 +155,7 @@
 					<div class="panel-body FAQ_text">
 						<h3>Can I attend?</h3>
 					</div>
-					<div class="panel-body FAQ_hover_text">High school, undergraduate, and graduate students are welcome to hack. Professionals are welcome to join as mentors, sponsors, or lecturers. Pearl Hacks welcomes all skill levels to participate, for this is the perfect environment to come and learn what you can do with a little bit of code.
+					<div class="panel-body FAQ_hover_text">All college students are welcomed to attend! Unfortuantely we cannot accept minors this year so you must be <strong>18</strong> to attend. Professionals are welcome to join as mentors, sponsors, or lecturers.
 					</div>
 				</div>
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
@@ -193,7 +193,7 @@
 						<h3>Registration Details</h3>
 					</div>
 					<div class="panel-body FAQ_hover_text">
-						Emails confirming registration details will be sent on February 28th.  If you register after March 15th, we can not guarantee you will receive a free Pearl Hacks shirt and food will be first delegated to those who registered early. Registration up until the date of the event is more than welcomed because nothing should keep you from this opportunity!
+						We will send emails out confirming registration in the coming future! More information to come...
  					</div>
 
 				</div>
@@ -206,18 +206,26 @@
 					<div class="panel-body FAQ_hover_text">Bring your own pillow and bedding. There will be a sleeping space available Friday and Saturday nights. If you'd prefer a hotel room, the Carolina Inn is only 200 feet away (although very expensive).
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<!--<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
 					<div class="panel-body FAQ_text">
 						<h3>Hardware?</h3>
 					</div>
 					<div class="panel-body FAQ_hover_text">MLH is providing the full hardware lab. In addition we will have soldering and assorted components, Arduinos, Raspberry Pis, and more Pebbles than you can wear on four limbs...
+					</div>
+				</div>-->
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+					<div class="panel-body FAQ_text">
+						<h3>Schedule?</h3>
+					</div>
+					<div class="panel-body FAQ_hover_text">
+						The schedule hasn't been finalized yet, but expect lots of workshops on Saturday and even more hacking Saturday/Sunday. We will have tech talks at night on Saturday and judging/closing ceremony on Sunday afternoon. Stay tuned for more information!
 					</div>
 				</div>
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
 					<div class="panel-body FAQ_text">
 						<h3>What about my team?</h3>
 					</div>
-					<div class="panel-body FAQ_hover_text">Be yourself; sign up as an individual! You can create your team with whoever you like, up to four people, once you arrive. Also, view the event page on Facebook to connect with fabulous ladies that are attending Pearl Hacks and looking for a team.
+					<div class="panel-body FAQ_hover_text">You can create your team with whoever you like, up to four people, once you arrive. Or if you are really determined you can create a project all by yourself! We will have a team forming event at the beginning event for those still looking.
 					</div>
 				</div>
 			</div>
@@ -226,7 +234,7 @@
 					<div class="panel-body FAQ_text">
 						<h3>Travel costs?</h3>
 					</div>
-					<div class="panel-body FAQ_hover_text">See <a href="about/travel/index.html">our travel policy</a> for more information.
+					<div class="panel-body FAQ_hover_text" > We do provide travel reimbursment. See <a href="about/travel/index.html">our travel policy</a> for more information.
 					</div>
 				</div>
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
@@ -240,7 +248,7 @@
 					<div class="panel-body FAQ_text">
 						<h3>Will I fit in?</h3>
 					</div>
-					<div class="panel-body FAQ_hover_text">Yes, you will! Pearl Hacks, Women in Computer Science at UNCCH, and UNC Computer Science are committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
+					<div class="panel-body FAQ_hover_text">Yes, you will! The entire UNC Computer Science Department is committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
 					</div>
 				</div>
 			</div>
@@ -274,6 +282,38 @@
 						<h3>Sponsors</h3>
 					</div>
 					<div class = "panel-body" id="sponsors">
+
+						<div class="slideshow-container">
+   						<div class="mySlides">
+     						<img src="./pearlhacks2015pics/14.jpg" style="width:100%">
+   						</div>
+   						<div class="mySlides">
+     					<img src="./pearlhacks2015pics/29.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/37.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/56.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/63.png" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/18295_903212886396057_3781128786212471311_n.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/21241_903209039729775_1264761911064036365_n.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/11001859_903213093062703_5412360328663178525_n.jpg" style="width:100%">
+   						</div>
+							<div class="mySlides">
+     					<img src="./pearlhacks2015pics/IMG_1890_0.jpg" style="width:100%">
+   						</div>
+						</div>
+						<br>
+
 						<div class="col-xs-9 col-md-9" style="width: 100%; padding: 0; overflow:hidden;">
 							<img class="img-responsive center-block contain" src = "images/sponsors/sponsors.png"/>
 						</div>
