--- a/learn/index.html
+++ b/learn/index.html
@@ -57,24 +57,25 @@
 						<ul class="dropdown-menu">
 							<li><a href="../about/travel/index.html">Travel</a></li>
 							<li><a href="../about/rules/index.html">Guidelines</a></li>
-							<li><a href="../about/maps/index.html">Maps</a></li>
-							<li><a href="../about/prizes/index.html">Prizes</a></li>
+							<!--<li><a href="../about/maps/index.html">Maps</a></li>
+							<li><a href="../about/prizes/index.html">Prizes</a></li>-->
 						</ul>
 						</li>
 						<li>
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
 							<li><a href="../apply/participant.html" target="_blank">Participant</a></li>
 							<li><a href="../apply/volunteer.html" target="_blank">Volunteer</a></li>
 							<li><a href="../apply/mentor.html" target="_blank">Mentor</a></li>
-						</ul>
+							</ul>-->
+							<a href="../apply/participant.html">Register</a>
 						</li>
 						<li>
 							<a href="">Learn</a>
 						</li>
-						<li>
+						<!--<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							Schedule <span class="caret"></span>
 						</a>
@@ -83,7 +84,7 @@
 							<li><a href="../schedule/workshops/index.html">Workshops</a></li>
 							<li><a href="../schedule/techtalks/index.html">Tech Talks</a></li>
 						</ul>
-						</li>
+						</li>-->
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
