Home page changes

--- a/index.html
+++ b/index.html
@@ -120,27 +120,26 @@
 		</header>
 	</div>
 	<div class="jumbotron">
+		<div class="leftHeader teal">
+			<h2><strong>Welcome to Pearl Hacks!</strong></h2>
+		</div>
 		<div id="content" class="container">
 			<div id="welcome" class="row">
-				<div class="leftHeader teal">
-					<h2><strong>Welcome to Pearl Hacks!</strong></h2>
+				<div class="row">
+					<div class="col-xs-12">
+						<p> What is Pearl Hacks you ask? Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women to pursue their interests in technology. Pearl Hacks is an annual event at UNC - Chapel Hill where female hackers of all skill levels come to explore technology with the help of numerous mentors. The event lasts around 24 hours and we will provide all the free food and swag your heart desires! Whether you've been writing Perl code since you could walk or you have yet to write your first "Hello World" program, we welcome everyone. Best of all is workshops! Workshops are held by experienced programmers throughout the day on all the topics your heart desires!  What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! We can't wait to meet you there.</p>
+					</div>
 				</div>
-				<div class="col-xs-12 col-md-8">
-					<p> What is Pearl Hacks you ask? Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women to pursue their interests in technology. Pearl Hacks is an annual event at UNC - Chapel Hill where female hackers of all skill levels come to explore technology with the help of numerous mentors. The event lasts around 24 hours and we will provide all the free food and swag your heart desires! Whether you've been writing Perl code since you could walk or you have yet to write your first "Hello World" program, we welcome everyone. Best of all is workshops! Workshops are held by experienced programmers throughout the day on all the topics your heart desires!  What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! We can't wait to meet you there.</p>
-				</div>
-				<div class="col-xs-12 col-md-4">
-					<div class="row" id="invitation">
-						<div class="col-xs-8 col-xs-offset-2">
-							<div class="content">
-								<h3>Register</h3>
-								<h4 style="margin-top: 0px; margin-bottom: 0px;" >as a</h4>
-								<a href="./apply/participant.html" class="btn btn-material-pink" target="_blank">Participant</a>
-								<h4 style="margin-top: 0px; margin-bottom: 0px;">or a</h4>
-								<a href="./apply/volunteer.html" class="btn btn-material-pink" target="_blank">Volunteer</a>
-								<h4 style="margin-top: 0px; margin-bottom: 0px;">or a</h4>
-								<a href="./apply/mentor.html" class="btn btn-material-pink" target="_blank">Mentor</a>
-							</div>
-						</div>
+				<div class="row">
+					<h3 class="centerText"><strong>register now!</strong></h3>
+					<div class="col-md-4 centerText">
+						<a href="./apply/participant.html" class="btn teal btn-white" target="_blank">Participant</a>
+					</div>
+					<div class="col-md-4 centerText">
+						<a href="./apply/volunteer.html" class="btn teal btn-white" target="_blank">Volunteer</a>
+					</div>
+					<div class="col-md-4 centerText">
+						<a href="./apply/mentor.html" class="btn teal btn-white" target="_blank">Mentor</a>
 					</div>
 				</div>
 			</div>
@@ -265,30 +264,30 @@
 					</div>
 					<div class="panel-body" id="2015pic">
 						<div class="slideshow-container">
-   						<div class="mySlides">
-     						<img src="./pearlhacks2015pics/14.jpg" style="width:100%">
-   						</div>
-   						<div class="mySlides">
-     					<img src="./pearlhacks2015pics/29.jpg" style="width:100%">
-   						</div>
+   							<div class="mySlides">
+     							<img src="./pearlhacks2015pics/14.jpg" style="width:100%">
+   							</div>
+   							<div class="mySlides">
+     							<img src="./pearlhacks2015pics/29.jpg" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/37.jpg" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/37.jpg" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/56.jpg" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/56.jpg" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/63.png" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/63.png" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/18295_903212886396057_3781128786212471311_n.jpg" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/18295_903212886396057_3781128786212471311_n.jpg" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/21241_903209039729775_1264761911064036365_n.jpg" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/21241_903209039729775_1264761911064036365_n.jpg" style="width:100%">
+   							</div>
 							<div class="mySlides">
-     					<img src="./pearlhacks2015pics/11001859_903213093062703_5412360328663178525_n.jpg" style="width:100%">
-   						</div>
+     							<img src="./pearlhacks2015pics/11001859_903213093062703_5412360328663178525_n.jpg" style="width:100%">
+   							</div>
 						</div>
 						<br>
 					</div>
@@ -309,15 +308,14 @@
 						</div>
 					</div>
 				</div>
+				<div style="height:400px;"></div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
-						<h3>What about...?</h3>
-					</div>
-					<div class="panel-body"><a href="mailto:hello@pearlhacks.com">Email us</a> with any of your questions.</div>
+			<div class="col-xs-12 pink footerHome">
+				<div id="footerHomeContent">
+					<h2><strong>more questions?</strong></h2>
+					<a href="mailto:hello@pearlhacks.com" class="btn btn-white emailButton" target="_blank">Email Us</a>
 				</div>
 			</div>
 		</div>
