--- a/index.html
+++ b/index.html
@@ -256,13 +256,11 @@
 
 		<div class="row">
 			<div class="col-xs-12">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
-						<a href="./apply/participant.html" target="_blank">
-							<h3>Come Join the Fun at Pearl Hacks 2016</h3>
-						</a>
+				<div class="">
+					<div class="leftHeader teal">
+						<h2><strong>Come Join the Fun at Pearl Hacks 2016</strong></h2>
 					</div>
-					<div class="panel-body" id="2015pic">
+					<div class="" id="2015pic">
 						<div class="slideshow-container">
    							<div class="mySlides">
      							<img src="./pearlhacks2015pics/14.jpg" style="width:100%">
@@ -292,23 +290,6 @@
 						<br>
 					</div>
 				</div>
-			</div>
-		</div>
-		<!-- Sponsors box is a clone of the support page. Keep these in sync. -->
-		<div class="row">
-			<div class="col-xs-12">
-				<div class="panel panel-primary pearlhacks-panel">
-					<div class="panel-heading">
-						<h3>Sponsors</h3>
-					</div>
-					<div class = "panel-body" id="sponsors">
-
-						<div class="col-xs-9 col-md-9" style="width: 100%; padding: 0; overflow:hidden;">
-							<img class="img-responsive center-block contain" src = "images/sponsors/sponsors.png"/>
-						</div>
-					</div>
-				</div>
-				<div style="height:400px;"></div>
 			</div>
 		</div>
 		<div class="row">
