--- a/apply/mentor.html
+++ b/apply/mentor.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
   <!--Add the title of your typeform below-->
-  <title>Mentor Signup</title>
-  <link rel="icon" href="../images/ariel.png" type="image/png">
+  <title>Mentor Signup 2017</title>
+
   <!--CSS styles that ensure your typeform takes up all the available screen space (DO NOT EDIT!)-->
   <style type="text/css">
     html{
@@ -24,7 +24,8 @@
   </style>
 </head>
 <body>
-  <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://pearlhacks1.typeform.com/to/eF6lgR"></iframe>
+  <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://pearlhacks1.typeform.com/to/EXF3Kk"></iframe>
   <script type="text/javascript" src="https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js"></script>
 </body>
 </html>
+
