--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -209,7 +209,7 @@
 					</div>
 					<div class="panel-body">
 						<p>We love international participants!
-							Unfortunately, Pearl Hacks cannot provide assistance for international travel or visa paperwork.
+							Unfortunately other than Canada, Pearl Hacks cannot provide assistance for international travel or visa paperwork.
 							However, if you do make it to Pearl Hacks, send us an e-mail with subject line: "International Participant".
 							The transportation team would love to show you around Chapel Hill if time permits!
 						</p>
