More CSS changes, About section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<h2><strong>Welcome to Pearl Hacks!</strong></h2>
 		</div>
 		<div id="content" class="container">
-			<div id="welcome" class="row">
+			<div class="row welcome">
 				<div class="row">
 					<div class="col-xs-12">
 						<p> What is Pearl Hacks you ask? Pearl Hacks is an all-female hackathon aimed towards creating an encouraging environment for women to pursue their interests in technology. Pearl Hacks is an annual event at UNC - Chapel Hill where female hackers of all skill levels come to explore technology with the help of numerous mentors. The event lasts around 24 hours and we will provide all the free food and swag your heart desires! Whether you've been writing Perl code since you could walk or you have yet to write your first "Hello World" program, we welcome everyone. Best of all is workshops! Workshops are held by experienced programmers throughout the day on all the topics your heart desires!  What's stopping you? Get ready for a weekend with phenomenal women you will never forget at Pearl Hacks! We can't wait to meet you there.</p>
