Learn page, link colors

--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -110,7 +110,7 @@
 		</div>
 	</div>
 	<div class="container" style="width:100%">
-		<div class="leftHeader pink">
+		<div class="leftHeader teal">
 			<h2><strong>Guidelines</strong></h2>
 		</div>
 			<div class="welcome">
