Updated Data Sharing Notice

--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -173,7 +173,7 @@
 				      	MLH Data Sharing Notice
 				</strong></h3>
 				<p>
-					All attendees must agree to the Data Sharing Notice, <a href = "https://github.com/MLH/mlh-policies/blob/master/data-sharing.md"> linked here</a>!
+					All Pearl Hacks attendees must agree to the MLH Data Sharing Notice, <a href = "https://github.com/MLH/mlh-policies/blob/master/data-sharing.md"> linked here</a>!
 				</p>
 			</div>	      
 			<div class="welcome">
