Updated "more" dropdown location
changed bootstrap.css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<!--link type="text/css" rel="stylesheet" href="css/bootstrap.css"/-->
 	<link type="text/css" rel="stylesheet" href="css/material-fullpalette.min.css" />
 	<!--Import Pearl Hacks overrides-->
 	<link type="text/css" rel="stylesheet" href="css/pearlhacks.css" />
