changes for mobile

--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -139,7 +139,7 @@
 	</div>
 		<div class="row welcome">
 			<div class="col-xs-12">
-				<p style="font-size: 19px;">All carpool reimbursements have to be pre-approved.</p>
+				<p>All carpool reimbursements have to be pre-approved.</p>
 				<p>A carpool consists of 3 or more students intending to participate in Pearl Hacks.</p>
 				<p>Once you receive registration information, e-mail us at hello@pearlhacks.com with subject line "Carpool Reimbursement". List the names
 				of participants who will carpool together and which schools, city and state you will be traveling from.
