--- a/index.html
+++ b/index.html
@@ -151,59 +151,72 @@
 			<div class="leftHeader purple">
 				<h2><strong>Frequently asked questions</strong></h2>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+			<div class="col-xs-12 col-sm-6 col-lg-3">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Can I attend?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble purple FAQ_bubble_click">
 					<div class="panel-body FAQ_hover_text">All college students are welcomed to attend! Unfortuantely we cannot accept minors this year so you must be <strong>18</strong> to attend. Professionals are welcome to join as mentors, sponsors, or lecturers.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>What is it?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">A weekend of fun and learning. You'll become a better programmer, meet fantastic ladies, and make cool stuff. You'll also have the chance to learn a lot and get loads of free stuff!
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Will there be food?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">Don’t worry. We’ll provide five full meals throughout the hackathon and there will be plenty of snacks in between. You won’t be hungry.
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+			<div class="col-xs-12 col-sm-6 col-lg-3">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>But I don't know how to code..</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">Don't you worry about a thing. We will have workshops for individuals of all skill levels, and mentors whom are specifically at Pearl Hacks to help you when you get stuck. Plus, you'll have 500 other women rooting for you and encouraging you every step of the way.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Can I use old code?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">You may use all the publicly available code and APIs that you want but the code you will be judged on at the end of the hackathon must be new.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Registration Details</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">
 						We will send emails out confirming registration in the coming future! More information to come...
  					</div>
-
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+			<div class="col-xs-12 col-sm-6 col-lg-3">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>What about sleep?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">Bring your own pillow and bedding. There will be a sleeping space available Friday and Saturday nights. If you'd prefer a hotel room, the Carolina Inn is only 200 feet away (although very expensive).
 					</div>
 				</div>
@@ -214,41 +227,51 @@
 					<div class="panel-body FAQ_hover_text">MLH is providing the full hardware lab. In addition we will have soldering and assorted components, Arduinos, Raspberry Pis, and more Pebbles than you can wear on four limbs...
 					</div>
 				</div>-->
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Schedule?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">
 						The schedule hasn't been finalized yet, but expect lots of workshops on Saturday and even more hacking Saturday/Sunday. We will have tech talks at night on Saturday and judging/closing ceremony on Sunday afternoon. Stay tuned for more information!
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>What about my team?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">You can create your team with whoever you like, up to four people, once you arrive. Or if you are really determined you can create a project all by yourself! We will have a team forming event at the beginning event for those still looking.
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+			<div class="col-xs-12 col-sm-6 col-lg-3">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Travel costs?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text" > We do provide travel reimbursment. See <a href="about/travel/index.html">our travel policy</a> for more information.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>How do I get in?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">Anyone can attend Pearl Hacks. Just thoughtfully fill out the application. The only limitation is the amount of food we can serve over the weekend, but if you register early.. come hungry.
 					</div>
 				</div>
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Will I fit in?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">Yes, you will! The entire UNC Computer Science Department is committed to making computer science a more diverse field. We are working to make this Pearl Hacks the most supportive environment for women in tech, so come willing and ready to meet inspirational and passionate women excited to hack with you.
 					</div>
 				</div>
