--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
 			<div class="leftHeader purple">
 				<h2><strong>Frequently asked questions</strong></h2>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-lg-3">
+			<div class="welcome">
+				<p>Click the questions below for their answers.</p>
+			</div>
+			<div id="FAQ_Col" class="col-xs-12 col-sm-6 col-lg-3">
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Can I attend?</h3>
