--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:description" content="Pearl Hacks - Everything you want to know" />
 	<meta name="twitter:image" content="http://pearlhacks.com/ariel.png" />
 	<title>Pearl Hacks</title>
-	<link rel="icon" href="images/ariel.png" type="image/png">
+	<link rel="icon" href="images/pearlhacksicon.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
