--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			</nav>
 		</div>
 	<div id="frontPage" class="jumbotron">
-		
+
 		<header class="full-height">
 			<div class="jumbotron">
 				<div class="tintOverlay"></div>
@@ -121,6 +121,8 @@
 			</div>
 		</header>
 	</div>
+	<center><span style="font-size:1.5em;"><strong>February 11th - 12th, 2017</strong></span></center>
+	<center><span style="font-size:1em;"><strong>University of North Carolina at Chapel Hill</strong></span></center><br>
 	<div class="jumbotron">
 		<div class="leftHeader teal">
 			<h2><strong>Welcome to Pearl Hacks!</strong></h2>
@@ -286,7 +288,7 @@
 			<div class="col-xs-12">
 				<div class="">
 					<div class="leftHeader teal">
-						<h2><strong>Come Join the Fun at Pearl Hacks 2016</strong></h2>
+						<h2><strong>Come Join the Fun at Pearl Hacks 2017</strong></h2>
 					</div>
 					<div class="" id="2015pic">
 						<div class="slideshow-container">
@@ -352,7 +354,7 @@
 	  ga('create', 'UA-74100181-1', 'auto');
 	  ga('send', 'pageview');
 	</script>
-	
+
 	<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
 </body>
 
