Updated Bus and Flight Info
Added more information on bus and flight.

--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -174,15 +174,26 @@
 				<div class="leftHeader pink">
 					<h2><strong>Charter Buses</strong></h2>
 				</div>
-				<p>We will be offering buses this year! Stay tuned for the routes and how to get on one!</p>
+				<p>We will be offering buses this year! We will have 3 buses that will be picking people up in Florida, Georiga, Virginia,
+				    Maryland, Pennsylvania, New Jersey and New York. Specific stops and more information will be out once routes are finalized. Bus signup 
+					emails will be sent out to eligible participants around mid-January. </p>
 			</div>
 			<div class="col-xs-12 col-sm-6">
 				<div class="leftHeader pink">
 					<h2><strong>Flights</strong></h2>
 				</div>
 				<p>We will be offering flight reimbursements on a first come first serve basis with the amount reimbursed
-			   affected by distance traveled. A base amount will be released at a later date.
-			   To request a flight reimbursement or you have any questions about the process, 
+			   dependent on where you are traveling from. 
+					If you are traveling from the West Coast or Canada, the maximum amount we are able to 
+			   reimburse will be $400. 
+			   		If you are traveling from anywhere else in the US, the maximum amount we are able to 
+			   reimburse will be $300. 
+					We are not able to offer flight reimbursements to participants from places that we are sending a bus to.
+					
+					Lastly, we will be sending emails out weekly to notify participants of their eligibility for 
+					flight reimbursements so if you've already signed up, be on the lookout for that email! 
+			   
+			   If you have any questions about the process, 
 			   please email us at hello@pearlhacks.com</p>
 			</div>
 		</div>
