--- a/about/rules/index.html
+++ b/about/rules/index.html
@@ -118,7 +118,7 @@
 					Attendee requirements
 				</strong></h3>
 				<p>
-					In order to attend Pearl Hacks you must have a valid university or high school ID. You may not enter the venue without a valid university or high school ID. This is a change from previous years due to a new policy at UNC - Chapel Hill. For more information, <a href="https://studentaffairs.unc.edu/faculty-staff/protection-minors">read the policy.</a> If you are a minor, your legal guardians must sign documents upon your arrival to Pearl Hacks.
+					In order to attend Pearl Hacks you must have a valid university ID. You may not enter the venue without a valid university ID.
 				</p>
 			</div>
 			<div class="welcome">
@@ -167,7 +167,7 @@
 					In an emergency, immediately call 911 then alert an organizer or volunteer by calling 470-242-HACK (4225).
 				</p>
 			</div>
-		
+
 			<div class = "welcome">
 				<h3><strong>
 				      	MLH Data Sharing Notice
@@ -175,7 +175,7 @@
 				<p>
 					All Pearl Hacks attendees must agree to the MLH Data Sharing Notice, <a href = "https://github.com/MLH/mlh-policies/blob/master/data-sharing.md"> linked here</a>!
 				</p>
-			</div>	      
+			</div>
 			<div class="welcome">
 				<h3><strong>
 					MLH Code of Conduct
