--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta property="og:site_name" content="Pearl Hacks 2017" />
 	<meta property="og:url" content="http://pearlhacks.com" />
 	<meta property="og:description" content="The all-female hackathon you don't want to miss. Pearl Hacks is February 11-12th, 2017 at University of North Carolina at Chapel Hill. Register now!" />
-	<meta property="og:image" content="http://pearlhacks.com/images/ariel.png" />
+	<meta property="og:image" content="http://pearlhacks.com/images/pearlhacksicon.png" />
 	<meta property="og:updated_time" content="1439328118" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@pearlhacks" />
 	<meta name="twitter:title" content="Pearl Hacks 2017" />
 	<meta name="twitter:description" content="Pearl Hacks - Everything you want to know" />
-	<meta name="twitter:image" content="http://pearlhacks.com/images/ariel.png" />
+	<meta name="twitter:image" content="http://pearlhacks.com/images/pearlhacksicon.png" />
 	<title>Pearl Hacks</title>
 	<link rel="icon" href="images/pearlhacksicon.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
