fix meta info and update faq

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta property="og:site_name" content="Pearl Hacks 2017" />
 	<meta property="og:url" content="http://pearlhacks.com" />
 	<meta property="og:description" content="The all-female hackathon you don't want to miss. Pearl Hacks is February 11-12th, 2017 at University of North Carolina at Chapel Hill. Register now!" />
-	<meta property="og:image" content="http://pearlhacks.com/images/pearlhacksicon.png" />
+	<meta property="og:image" content="http://pearlhacks.com/images/17logo.png" />
 	<meta property="og:updated_time" content="1439328118" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@pearlhacks" />
 	<meta name="twitter:title" content="Pearl Hacks 2017" />
 	<meta name="twitter:description" content="Pearl Hacks - Everything you want to know" />
-	<meta name="twitter:image" content="http://pearlhacks.com/images/pearlhacksicon.png" />
+	<meta name="twitter:image" content="http://pearlhacks.com/images/17logo.png" />
 	<title>Pearl Hacks</title>
 	<link rel="icon" href="images/pearlhacksicon.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
@@ -164,7 +164,7 @@
 					</div>
 				</div>
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble purple FAQ_bubble_click">
-					<div class="panel-body FAQ_hover_text">All college students are welcomed to attend! Unfortuantely we cannot accept minors this year so you must be <strong>18</strong> to attend. Professionals are welcome to join as mentors, sponsors, or lecturers.
+					<div class="panel-body FAQ_hover_text">All <strong>female</strong> college students are welcomed to attend! Unfortuantely we cannot accept minors this year so you must be <strong>18</strong> to attend. Professionals are welcome to join as mentors, sponsors, or lecturers. Males are encouraged to attend as volunteers and mentors!
 					</div>
 				</div>
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
