--- a/index.html
+++ b/index.html
@@ -283,7 +283,15 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="container" style="width:100%">
+			<div class="leftHeader teal">
+				<h2><strong>Sponsors</strong></h2>
+			</div>
+			<div class="row welcome">
+				<div class="col-xs-12">
+					<img src="./images/sponsorlogoimage.png" style="width:100%">
+				</div>
+			</div>
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="">
