--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			</div>
 		</div>
 		<div class="container" style="width:100%">
-			<div class="leftHeader teal">
+			<div class="leftHeader pink">
 				<h2><strong>Sponsors</strong></h2>
 			</div>
 			<div class="row welcome">
