add hardware faq

--- a/index.html
+++ b/index.html
@@ -226,14 +226,16 @@
 					<div class="panel-body FAQ_hover_text">Bring your own pillow and bedding. There will be a sleeping space available Friday and Saturday nights. If you'd prefer a hotel room, the Carolina Inn is only 200 feet away (although very expensive).
 					</div>
 				</div>
-				<!--<div class="panel panel-primary pearlhacks-panel FAQ_bubble">
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Hardware?</h3>
 					</div>
+				</div>
+				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_click purple">
 					<div class="panel-body FAQ_hover_text">MLH is providing the full hardware lab. In addition we will have soldering and assorted components, Arduinos, Raspberry Pis, and more Pebbles than you can wear on four limbs...
 					</div>
-				</div>-->
-				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
+				</div>
+				<!--<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>Schedule?</h3>
 					</div>
@@ -242,7 +244,7 @@
 					<div class="panel-body FAQ_hover_text">
 						The schedule hasn't been finalized yet, but expect lots of workshops on Saturday and even more hacking Saturday/Sunday. We will have tech talks at night on Saturday and judging/closing ceremony on Sunday afternoon. Stay tuned for more information!
 					</div>
-				</div>
+				</div>-->
 				<div class="panel panel-primary pearlhacks-panel FAQ_bubble FAQ_bubble_orig">
 					<div class="panel-body FAQ_text">
 						<h3>What about my team?</h3>
